finished css designs. Need to add task checkboxes and align logo correctly. Both are work to be done in adobe

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -138,7 +138,7 @@ body {
   /* setting dot to correct position */
   position: absolute;
   height: 0.8vh;
-  top: 19.5vh;
+  top: 18vh;
   left: 17vw;
 }
 
@@ -147,6 +147,7 @@ body {
 #calendar {
   width: 90%;
   height: 30%;
+  margin-top: 10%;
   align-self: center;
 }
 
@@ -168,14 +169,15 @@ body {
 
 #calendarGrid {
   display: grid;
-  grid-template-rows:  3.5vh  3.5vh  3.5vh  3.5vh  3.5vh  3.5vh  3.5vh;
-  height: 100%;
+  grid-template-rows:  1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 85%;
   background-color: #32373e;
   border-radius: 8px;
 }
 
 .calendarGrid__point {
   width: 0.8vw;
+  height: fit-content;
   padding: 0.1vh 0.5vw;
   margin: 0 0.2vw 0 0.2vw;
   font-size: 1.8vh;
@@ -192,7 +194,6 @@ body {
   display: flex;
   justify-content: center;
   width: 95%;
-  margin: 2vh 0 0 0.3vh;
   height: fit-content;
   justify-self: center;
 }
@@ -210,9 +211,10 @@ body {
   display: flex;
   justify-content: center;
   width: 95%;
-  margin: 1vh 0 0 0;
   height: fit-content;
   justify-self: center;
+  margin: 1vh 0 0 0;
+  padding-bottom: 1vh;
 }
 
 .calendarGrid__point--weekHeading {
@@ -238,6 +240,7 @@ body {
 .taskDisplayDay {
   display: flex;
   flex-flow: column;
+  height: fit-content;
   margin: 2vh 0 0 0;
 }
 
@@ -256,7 +259,37 @@ body {
 .taskDisplayDay__date {
   height: 2vh;
   align-self: flex-end;
-  margin: 0 0 2.4vh 0;
+  margin: 0 0 2.4vh .5vw;
   color: #ffffff;
   font-size: 2vh;
+}
+
+.taskDisplayDay__taskRow {
+  display: flex;
+  flex-flow: row;
+  margin: 4vh 0 0 0;
+  width: 100%;
+  height: 100%;
+}
+
+.task {
+  display: flex;
+  flex-flow: row;
+  height: 6vh;
+  width: 23vw;
+  margin: 0 1.5vw 0 0;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 3px 5px 5px #11111144;
+}
+
+.task__doneMarker--incomplete {
+
+}
+
+.task__description {
+  color: #32373e;
+  font-size: 2.5vh;
+  margin: 0 0 0 5vw;
 }
